# compression_horizon

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: paper.yml  poster-pages.yml  run-tests.yml
docs/adr/: 0001-lean-core-extraction-scope.md  0002-rename-package-to-progressive-cramming.md  0003-two-tier-reproduction.md  0004-budget-rebalancing-loss.md  0004-ce-temperature-training-knob.md  (+1 more)
experiments/: budget_rebalancing.md
habr/: README.md  habr.md  habr_export.md  habr_progressive_cramming.docx
notebooks/: Compression_hybrid_loss.ipynb  Compression_reconstruction_accuracy.ipynb
paper/: .gitignore  .latexmkrc  README.md  appendix.tex  check_unused_attachments.py  example_paper.bib  example_paper.tex  figure_progressive_cramming.tikz  lint_paper.py  profressive_cramming_algorithm.tex  rebuttle.tex  visual_abstract.tikz
poster/: poster.html  tikz_eval_protocol.tex  tikz_full_cramming.tex  tikz_lowdim_proj.tex
scripts/: activation_distillation.py  aggregate_budget_rebalancing.py  analyze_pca_jump_concentration.py  analyze_solution_diversity.py  analyze_surprisal_vs_steps.py  analyze_trajectory_clusters.py  arc_compress_evaluate.py  build_table_18.py  compression_neighborhood.py  diagnose_ig_budget.py  early_exit.py  eval_table_18.py  finetune_causal_lm.py  generate_from_compression_token.py  greedy_reconstruction_eval.py  hellaswag_compress_evaluate.py  hybrid_loss.py  interpolation.py  interpolation_reconstruction.py  mmlu_compress_evaluate.py  plot_surprisal_curve.py  progressive_experiments.sh  reproduction.py  run_table_18.sh  visialize_compression_embeddings.py  visualize_bezier.py  visualize_progressive_embeddings.py  watch_budget_rebalancing.py
tests/: bar.py  test_budget_rebalance_config.py  test_budget_rebalance_loss.py  test_ce_temperature.py  test_compression_head_trainer.py  test_config.py  test_dimensionality.py  test_embedding_serialization_roundtrip.py  test_full_cramming_golden.py  test_full_cramming_trainer.py  test_information_gain.py  test_intervention.py  test_low_dim_trainer.py  test_prefix_progressive.py  test_prefix_tuning_trainer.py  test_progressive_bucketed.py  test_progressive_cramming_trainer.py  test_trainer_core.py
(+225 files in other folders)
