[project]
name = "compression-horizon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M1croZavr", email = "tlashukov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.3.0",
    "matplotlib>=3.10.7",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[project.scripts]
compression-horizon = "compression_horizon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "ruff>=0.14.3",
]

[tool.ruff]
target-version = "py312"
line-length = 128
src = ["src"]
exclude = []

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "I",   # isort (import sorting)
]
# Keep compatible with Black around slicing
ignore = ["E203", "E501"]
