[project]
name = "icml2026_progressive_cramming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.3.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.10.7",
    "peft>=0.18.1",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.20.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "ripser>=0.6.4",
    "persim>=0.3.2",
]

[project.scripts]
compression-horizon = "compression_horizon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compression_horizon"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "pre-commit>=4.4.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.ruff]
target-version = "py312"
line-length = 128
src = ["src"]
exclude = []

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "I",   # isort (import sorting)
]
# Keep compatible with Black around slicing
ignore = ["E203", "E501"]
